# functions/api/routers/api.router.js
@@ -8,12 +8,12 @@ apiRouter.post('/newUser', controller.addUser);
 apiRouter.get('/users', controller.getUsers);
 apiRouter.post('/authenticate', controller.authenticate);
 
-apiRouter.post('/newAccount', controller.newAccount);
-apiRouter.get('/accounts/:uid', controller.getAccounts);
+apiRouter.post('/newCategory', controller.newAccount);
+apiRouter.get('/categories/:uid', controller.getAccounts);
 
-apiRouter.post('/newTransaction', controller.postTransaction);
-apiRouter.get('/userTransactions/:uid', controller.getTransactionsByUser);
-apiRouter.get('/accTransactions/:acid', controller.getTransactionsByAccount);
+apiRouter.post('/newExpense', controller.postTransaction);
+apiRouter.get('/userExpenses/:uid', controller.getTransactionsByUser);
+apiRouter.get('/accExpenses/:acid', controller.getTransactionsByAccount);
 
 apiRouter.post('/payday', controller.payDay);
 apiRouter.get('/paychecks/:uid', controller.getPaychecks);
